# bindletools

./: .gitignore  COPYING  COPYING.md  ChangeLog  ChangeLog.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  autogen.sh  configure.ac
bindletools.xcodeproj/: project.pbxproj
bindletools.xcodeproj/xcshareddata/xcschemes/: bindle test: cnftest.xcscheme  bindle test: fdtest.xcscheme  bindle-ios.xcscheme  bindle-osx.xcscheme  bindle: Git Version.xcscheme  bindle: doxygen.xcscheme  bindle: libbindle.a.xcscheme  bindle: open docs.xcscheme  bindle: tests.xcscheme
build-aux/: .gitignore  autogen.sh  bindle-autogen.sh  bindle-prefix.sh  bindletest-gccwarnings.c  git-package-version.sh  git-tar-name.txt  makefile-autotools.am  makefile-bindle.am  makefile-libbindle.am  makefile-subst.am  makefile-version.am
checks/: bindle-array-queue.c  bindle-enc-b32-enc.c  bindle-enc-b32-val.c  bindle-enc-b64-val.c  bindle-enc-crock-dec.c  bindle-enc-crock-enc.c  bindle-enc-crock-val.c  bindle-enc-hex-dec.c  bindle-enc-hex-enc.c  bindle-enc-strings.c  bindle-enc-strings.h  bindle-str-basename.c  bindle-str-dirname.c  bindle-tests.h  bindle-url-encoding.c  bindle-urldesc-parse.c
doc/: Doxyfile
doc/mans/: bindle_array.3.in  bindle_basename_r.3.in  bindle_berval.3.in  bindle_bindex.3.in  bindle_bvarray.3.in  bindle_decode.3.in  bindle_dirname_r.3.in  bindle_enqueue.3.in  bindle_filetostr.3.in  bindle_getpass.3.in  bindle_peek.3.in  bindle_push.3.in  bindle_readline.3.in  bindle_refcount.3.in  bindle_strchomp.3.in  bindle_strdup.3.in  bindle_strexpand.3.in  bindle_strings.3.in  bindle_strlcpy.3.in  bindle_strsadd.3.in  bindle_strsplit.3.in  bindle_strtoargs.3.in  bindle_strtobool.3.in  bindle_strtrim.3.in  bindle_urldesc.3.in  bindletools-base16.1.in  bindletools-base32.1.in  bindletools-base32hex.1.in  bindletools-base64.1.in  bindletools-crockfordbase32.1.in  bindletools-pctenc.1.in  bindletools-urldesc.1.in  bindletools.1.in  bindletools.3.in
examples/: .gitignore  Makefile  example-bsearch.c  example-decode.c  example-encode.c  example-queue.c  example-refcount.c  example-stack.c
include/: bindle.h  bindle.pch
include/bindle/: cnf.h  err.h  errno.h  fd.h  regex.h  utf8.h  version.h
lib/: libbindle-utf8.c  libbindle-version.c  libbindle.sym
lib/libbindle/: cnf.c  err.c  errno.c  fd.c  larray.c  larray.h  lberval.c  lberval.h  ldebug.c  ldebug.h  lencoding.c  lencoding.h  lfile.c  lfile.h  lhash.c  lhash.h  libbindle.h  libbindle.sym  lmap.c  lmap.h  lobj.c  lobj.h  log.c  loptions.c  loptions.h  lprompt.c  lprompt.h  lstring.c  lstring.h  lstrings.c  lstrings.h  lurl.c  lurl.h  lutf8.c  lutf8.h  utf8.c
lib/old/lib/: fd.c  libbindle.sym  utf8.c
lib/old/lib/bindle/: cdefs.h  cnf.h  log.h  version.h
lib/old/perl-bindletools/: .gitignore  Changes  MANIFEST  Makefile.PL
lib/old/perl-bindletools/lib/Bindle/: Version.pm.in
lib/old/perl-bindletools/src/: vars.pl
lib/old/perl-bindletools/t/: CGI.t
lib/perl-bindletools/: .gitignore  README
lib/perl-bindletools/lib/Bindle/: CGI.pm  Version.pm  Version.pm.in
lib/perl-bindletools/t/: Version.t
m4/: bindle-doxygen.m4  bindle-fd-poller.m4  bindle-gcc.m4  bindle-git.m4  bindle-libbindle.m4  bindle-libtool.m4  bindle-perl.m4  bindle-postgresql.m4  bindle-sqlite3.m4  bindle-tools.m4  bindle-xxd.m4  bindle.m4
src/: bindletools.c  bindletools.h  bindlize.sh.in  widget-encodings.c  widget-expand.c  widget-urldesc.c  widget-urlencoding.c
tests/: bindle-str-expand.c  bindle-str-split.c  bindle-tests.h  utf8test-ascii.sh  utf8test-ascii.txt  utf8test-invalid-continuation.txt  utf8test-null.txt  utf8test-utf8.txt  utf8test.sh
tests/bindletools/: README.md  bindle-array-queue.c  bindle-array-sorted.c  bindle-array-stack.c  bindle-enc-b32-dec.c  bindle-enc-b32-enc.c  bindle-enc-b32-val.c  bindle-enc-b32h-dec.c  bindle-enc-b32h-enc.c  bindle-enc-b32h-val.c  bindle-enc-b64-dec.c  bindle-enc-b64-enc.c  bindle-enc-b64-val.c  bindle-enc-crock-dec.c  bindle-enc-crock-enc.c  bindle-enc-crock-val.c  bindle-enc-hex-dec.c  bindle-enc-hex-enc.c  bindle-enc-hex-val.c  bindle-enc-pctenc-dec.c  bindle-enc-pctenc-enc.c  bindle-enc-pctenc-val.c  bindle-enc-strings.c  bindle-enc-strings.h  bindle-hash-berval.c  bindle-hash-string.c  bindle-str-basename.c  bindle-str-chomp.c  bindle-str-dirname.c  bindle-str-expand.c  bindle-str-split.c  bindle-tests.c  bindle-tests.h  bindle-url-encoding.c  bindle-urldesc-parse.c  bindletools-base16.sh.in  bindletools-base32.sh.in  bindletools-base32hex.sh.in  bindletools-base64.sh.in  bindletools-crockfordbase32.sh.in  (+1 more)
tests/cnf/: cnftest.c
tests/fd/: crlf.sh  crlf.txt  escnl.sh  escnl.txt  fdtest.c  simple.sh  simple.txt
tests/utf8/: invalid-length.txt  mixed.txt  utf8test.c  utf8test.sh
